<resources>
    <string name="app_name">PMDMU5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="passwd">Contraseña</string>
    <string name="btn_acceder">Acceder</string>
    <string name="btn_no_register">Aún no estoy registrado</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_create">Crear nueva cuenta</string>
    <string name="btn_register">Registrarme</string>
    <string name="hint">Texto</string>
</resources>